docker-composeファイルのミスを修正

--- a/Fairies/docker-compose.yaml
+++ b/Fairies/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
         environment:
             - MYSQL_ROOT_PASSWORD=root #適切に変更
         ports:
-            - MYSQL_PORT:3306
+            - ${MYSQL_PORT}:3306
 
     phpmyadmin:
         build:
